--- a/app/application/admin/views/scripts/navi/edit.phtml
+++ b/app/application/admin/views/scripts/navi/edit.phtml
@@ -57,7 +57,7 @@ var tree = {type: 'navi', id: '<?php echo $this->naviDoc->getId()?>'};
 		<div class='link-el'>链接地址：</div>
 		<div><input class='edit-value' name='link' type='text' value='{{ link }}'></div>
 		<div class='css-el'>CSS Name：</div>
-		<div><input class='edit-value' name='css' type='text' value='{{ css }}'></div>
+		<div><input class='edit-value' name='className' type='text' value='{{ className }}'></div>
 		<a class='edit-save button' href='javascript:void(0)'>保存</a>
 		<a class='edit-delete button' href='javascript:void(0)'>删除</a>
 	</div>
