remove css field

--- a/app/application/admin/views/scripts/group/edit.phtml
+++ b/app/application/admin/views/scripts/group/edit.phtml
@@ -62,8 +62,8 @@ var tree = {type: 'group', id: '<?php echo $this->doc->type?>'};
 		<div><input class='edit-value' name='label' type='text' value='{{ label }}'></div>
 		<div class='link-el'>分组地址：</div>
 		<div><input class='edit-value' name='link' type='text' value='{{ link }}'></div>
-		<div class='css-el'>CSS Name：</div>
-		<div><input class='edit-value' name='css' type='text' value='{{ css }}'></div>
+		<!-- div class='css-el'>CSS Name：</div>
+		<div><input class='edit-value' name='className' type='text' value='{{ className }}'></div -->
 		<a class='edit-save button' href='javascript:void(0)'>保存</a>
 		<a class='edit-delete button' href='javascript:void(0)'>删除</a>
 	</div>
