--- a/app/application/admin/views/scripts/product/edit.phtml
+++ b/app/application/admin/views/scripts/product/edit.phtml
@@ -18,6 +18,14 @@
 </fieldset>
 <div class='clear'></div>
 
+<fieldset class='product-form'>
+	<legend>图片</legend>
+	<ul id='product-list'>
+		
+	</ul>
+	<button callback='insertAttachment' class="icon-selector" type="button" name="">添加图片</button>
+</fieldset>
+<div class='clear'></div>
 <script type="text/javascript">
 $(document).on({
 	'click': function(e) {
