--- a/app/application/admin/views/scripts/product/edit.phtml
+++ b/app/application/admin/views/scripts/product/edit.phtml
@@ -23,7 +23,7 @@
 	<ul id='product-list'>
 		
 	</ul>
-	<button callback='insertAttachment' class="icon-selector" type="button" name="">添加图片</button>
+	<button callback='insertImage' class="icon-selector" type="button" name="">添加图片</button>
 </fieldset>
 <div class='clear'></div>
 <script type="text/javascript">
@@ -57,4 +57,5 @@ var saveWithAttachment = function() {
 	
 	return false;
 };
+
 </script>
