add book info editor, add multiple languages

--- a/app/application/admin/views/scripts/book/edit.phtml
+++ b/app/application/admin/views/scripts/book/edit.phtml
@@ -1,89 +1,1 @@
-<div class='container-bg'>
-	<ul class='container'>
-		<li class='drop-to-sort'></li>
-	</ul>
-</div>
-<div><a herf='javascript:void(0)' class='create-link'>添加新书页</a></div>
-
-<script>
-saveSort = function() {
-	var prompt = Prompt.getInstance().showLoadingBox();
-	prompt.hideHintBox();
-	
-	var treeleafs = $('.treeleaf-item');
-	var sortJsonStr = '{';
-	treeleafs.each(function(i, leaf) {
-		sortJsonStr += '"' + $(leaf).attr('id') +'":{"parentId":"'+$(leaf).attr('parent-id')+'", "sort":' + i + '},';
-	});
-	sortJsonStr = sortJsonStr.substring(0, sortJsonStr.length - 1);
-	sortJsonStr += '}';
-	
-	$.ajax({
-		url: '/admin/book/tree-sort/',
-		data: {treeId: "<?php echo $this->doc->getId()?>", sortJsonStr: sortJsonStr},
-		type: 'post',
-		success: function(json) {
-			prompt.hideLoadingBox();
-			$('.changed').removeClass('changed');
-		}
-	});	
-};
-
-//global defines
-var tree = {type: 'book', id: '<?php echo $this->doc->getId()?>'};
-</script>
-
-<script data-main="<?=Class_Server::libUrl()?>/admin/script/app/treeleaf" src="<?=Class_Server::extUrl()?>/require-jquery.js"></script>
-
-<script type='text/template' id='treeleaf-item-template'>
-	<% if(parentId == '') {%>
-	<div class='leaf-line changed'>
-	<% } else { %>
-	<div class='leaf-line'>
-	<% } %>
-		<div class='drag-handle' draggable='true'></div>
-		<div class='leaf-label'><a href='javascript:void(0)' class='edit' id='{{ id }}'>{{ label }}</a></div>
-		
-		<div class='leaf-page-edit'>
-			<a class='mini-icon-bg mini-icon-edit' href='/admin/book/edit-page/id/{{ id }}'></a>
-		</div>
-		
-		<div class='leaf-link'>
-		<% if(link) { %>
-			{{ link }}
-		<% } else { %>
-			{{ id }}
-		<% } %>
-		</div>
-
-		<div class='clear'></div>
-	</div>
-	<ul class='children'>
-		<li class='drop-to-sort' parent-id='{{ id }}'></li>
-	</ul>
-</script>
-
-<script type='text/template' id='treeleaf-editor'>
-	<div class='editor-title'>新建/修改链接</div>
-	<div class='editor-contenr'>
-		<div class='label-el'>链接名：</div>
-		<div><input class='edit-value' name='label' type='text' value='{{ label }}'></div>
-		<div class='link-el'>链接地址：</div>
-		<div><input class='edit-value' name='link' type='text' value='{{ link }}'></div>
-		<a class='edit-save button' href='javascript:void(0)'>保存</a>
-		<a class='edit-delete button' href='javascript:void(0)'>删除</a>
-	</div>
-</script>
-
-<script>
-var createLink = function(){
-	var LinkModel = new Treeleaf();
-	var createLink = new TreeleafEditorView({
-		model:LinkModel
-	});
-	createLink.render();
-}
-$('.create-link').click(function(){
-	createLink();
-});
-</script>
+<?php echo $this->form?>
