--- a/app/application/admin/views/scripts/template.phtml
+++ b/app/application/admin/views/scripts/template.phtml
@@ -12,7 +12,7 @@ $naviArr = array(
 	array('title' => '用户管理', 'url' => '/admin/user/', 		'tooltip' => '管理网站注册的用户信息，例如：会员的注册登记管理。'),
 	array('title' => '系统管理', 'url' => '/admin/system/',		'tooltip' => '编辑网站的基本信息如:"keywords, page title"，管理系统文件，CSS&JS文件等等。'),
 	array('title' => '模块管理', 'url' => '/admin/brick/',		'tooltip' => '可编辑查看到网站前台所有在显示的模块。模块管理操作一般在前台页面进行编辑'),
-	array('title' => '文件管理', 'url' => 'http://file.enorange.cn/'.$csa->getOrgCode().'/admin/',	'tooltip' => '管理网站内所有图片和文档，例如：logo，广告里面的图片，文章中的附件等等。'),
+	array('title' => '文件管理', 'url' => 'http://file.enorange.cn/'.Class_Server::getSiteFolder().'/admin/',	'tooltip' => '管理网站内所有图片和文档，例如：logo，广告里面的图片，文章中的附件等等。'),
 	array('title' => '问卷管理', 'url' => 'http://forum.enorange.cn/'.$csa->getOrgCode().'/admin/',	'tooltip' => '编辑查看网站用户的一些留言，例如：在线订购等。'),
 	array('title' => '留言管理', 'url' => 'http://form.enorange.cn/'.$csa->getOrgCode().'/admin/',	'tooltip' => '编辑查看网站用户的对网站问卷调查的答复，留言，例如：在线调查等等。')
 );	
