add site_folder to head

--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -64,6 +64,7 @@ _.extend(EventMessenger, Backbone.Events);
 var FILE_SERVER = "<?=Class_Server::miscUrl()?>";
 
 window.ORG_CODE = "<?php echo Class_Server::getOrgCode()?>";
+window.SITE_FOLDER = "<?php echo Class_Server::getSiteFolder()?>";
 </script>
 <?php } ?>
 </head>
