--- a/app/application/admin/views/scripts/head.phtml
+++ b/app/application/admin/views/scripts/head.phtml
@@ -30,4 +30,5 @@ _.extend(EventMessenger, Backbone.Events);
 var FILE_SERVER = "<?//=Class_HTML::server('file')?>";
 
 window.ORG_CODE = "<?php echo Class_Server::getOrgCode()?>";
+window.SITE_FOLDER = "<?php echo Class_Server::getSiteFolder()?>";
 </script>
