--- a/app/application/admin/views/scripts/head.phtml
+++ b/app/application/admin/views/scripts/head.phtml
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="<?=Class_Server::libUrl()?>/admin/style/backend.css" type="text/css" media="screen" rel="stylesheet">
 <link rel="stylesheet" href="<?=Class_Server::libUrl()?>/admin/style/tooltip.css" type="text/css" media="screen, projection">
 <link rel="stylesheet" href="<?=Class_Server::extUrl()?>/prompt/prompt.css" type="text/css" media="screen, projection">
+
+<link rel="stylesheet" href="<?=Class_Server::extUrl()?>/tab/test.css" type="text/css" media="screen, projection">
+
 <?=$this->headLink() ?>
 
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/jub.js"></script>
@@ -14,6 +17,8 @@
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/ajax-select-grid.js"></script>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/prompt/prompt.js"></script>
+
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/tab/test.js"></script>
 
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/script/icon-selector.js"></script>
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/back.js"></script>
