--- a/app/application/admin/views/scripts/ad-section/index.phtml
+++ b/app/application/admin/views/scripts/ad-section/index.phtml
@@ -3,7 +3,7 @@
 </ul>
 
 <script>
-var fileUrl = "<?php echo Class_Server::fileUrl()?>";
+var fileUrl = "<?php echo Class_Server::getImageUrl().'/'.Class_Server::getSiteFolder()?>";
 </script>
 
 <script data-main="<?=Class_Server::libUrl()?>/admin/script/app/ad-section" src="<?=Class_Server::extUrl()?>/require-jquery.js"></script>
