--- a/app/application/admin/views/scripts/ad/index.phtml
+++ b/app/application/admin/views/scripts/ad/index.phtml
@@ -4,7 +4,7 @@
 
 <script>
 var sectionId = "<?php echo $this->sectionId?>";
-var fileUrl = "<?php echo Class_Server::fileUrl()?>";
+var fileUrl = "<?php echo Class_Server::getImageUrl().'/'.Class_Server::getSiteFolder()?>";
 </script>
 
 <script data-main="<?=Class_Server::libUrl()?>/admin/script/app/ad" src="<?=Class_Server::extUrl()?>/require-jquery.js"></script>
