multiple graphics for product

--- a/app/application/admin/views/scripts/head.phtml
+++ b/app/application/admin/views/scripts/head.phtml
@@ -6,8 +6,7 @@
 <link rel="stylesheet" href="<?=Class_Server::libUrl()?>/admin/style/backend.css" type="text/css" media="screen" rel="stylesheet">
 <link rel="stylesheet" href="<?=Class_Server::libUrl()?>/admin/style/tooltip.css" type="text/css" media="screen, projection">
 <link rel="stylesheet" href="<?=Class_Server::extUrl()?>/prompt/prompt.css" type="text/css" media="screen, projection">
-
-<link rel="stylesheet" href="<?=Class_Server::extUrl()?>/tab/test.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="<?=Class_Server::extUrl()?>/tab/tab.css" type="text/css" media="screen, projection">
 
 <?=$this->headLink() ?>
 
@@ -17,8 +16,7 @@
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/ajax-select-grid.js"></script>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/prompt/prompt.js"></script>
-
-<script type="text/javascript" src="<?=Class_Server::extUrl()?>/tab/test.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/tab/tab.js"></script>
 
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/script/icon-selector.js"></script>
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/back.js"></script>
