--- a/app/application/admin/views/scripts/site/index.phtml
+++ b/app/application/admin/views/scripts/site/index.phtml
@@ -1,34 +1,12 @@
-<?=$this->form?>
+<form action='' method='post' enctype='application/x-www-form-urlencoded'>
+	<ul class='tab-handle'>
+		<li class='handle'>基本信息</li>
+		<li class='handle'>缩略图尺寸</li>
+	</ul>
+	<ul class='tab-content'>
+		<?php echo $this->form;?>
+		<li class='handle-overlap'></li>
+	</ul>
+</form>
 
 <div class='clear'></div>
-
-<script type='text/javascript'>
-//var imageSelector = $("#logoPath");
-//var toContent = $('#to-content');
-//var lightBox = $().LightBox();
-//
-//imageSelector.css({'background-color':'#ddeeff'});
-//imageSelector.click(function() {
-//	lightBox.show();
-//	$.ajax({
-//		url: "/admin/file/get-file-selector/format/html/group/logo",
-//		success: function(HTML) {
-//			lightBox.setContent(HTML);
-//			container = lightBox.getContent();
-//			container.find('.file').click(function() {
-//				var path = $(this).attr('path');
-//				imageSelector.val(path);
-//				lightBox.hide();
-//			});
-//		}
-//	});
-//});
-//
-//var linkSelector = $(".select-link");
-//linkSelector.click(function() {
-//	lightBox.show();
-//	content = lightBox.getContent();
-//	content.append(toContent);
-//	toContent.css('display','block');
-//});
-</script>
